--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,18 @@ cmake_minimum_required(VERSION 3.16)
 project(code)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(code
-        Basic/Basic.cpp
-        Basic/evalstate.cpp
-        Basic/exp.cpp
-        Basic/parser.cpp
-        Basic/program.cpp
-        Basic/statement.cpp
-        Basic/Utils/error.cpp Basic/Utils/error.hpp Basic/Utils/tokenScanner.cpp Basic/Utils/tokenScanner.hpp
-        Basic/Utils/strlib.cpp
+include_directories(
+    Basic
+    Basic/Utils
+    StanfordCPPLib
 )
+
+file(GLOB SOURCES
+     "Basic/*.cpp"
+     "Basic/Utils/*.cpp"
+     "StanfordCPPLib/*.cpp"
+)
+
+add_executable(code ${SOURCES})
